Fixed edge overflow

--- a/client/src/components/pages/Feed.css
+++ b/client/src/components/pages/Feed.css
@@ -53,8 +53,6 @@
 }
 
 .time {
-  position: relative;
-  left: 65%;
   color: gray;
 }
 
