--- a/client/src/components/pages/Profile.css
+++ b/client/src/components/pages/Profile.css
@@ -62,4 +62,6 @@
 
 .ineedtitle {
   color: gray;
+  font-size: xx-large;
+  text-align: center;
 }
